--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Bart</title>
+  <title>Bart Visualizer</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div id="content" class="container">
+  <div class="navbar">
+    <div class="navbar-inner">
+       <a class="brand" href="#">Title</a>
+       <ul class="nav">
+         <li class="active"><a href="#">Home</a></li>
+         <li><a href="#">Link</a></li>
+         <li><a href="#">Link</a></li>
+       </ul>
+     </div>
+  </div>
 
-<%= yield %>
-
+  <div class="row">
+    <div class="span10 offset1">
+      <%= yield %>
+    </div>
+  </div>
+</div>
 </body>
 </html>
